# multiplayer-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
lib/: net_common.h
src/: Game.cpp  Game.h  GameState.h  Main.cpp  Player.cpp  Player.h
src/client/: Main.cpp  NetworkClient.h
src/common/: Game.cpp  Game.h  GameState.h  Player.cpp  Player.h  vec2.h
src/common/include/: Networking.h  RGB.h
src/common/include/ivs/: Game.h  net.h
